@startuml entities_responsibilities
!theme spacelab

entity MSpellingApp {
    Basic config
    Start app
}

entity SetupController {
    Choose appropriate screen
}

entity SetupView {
    Show loading screen while setup completes
}

entity WorkspaceView {
    Present screen to choose dir 
    Go to appropriate screen
}

entity LoginView {
    Collect participant id
    Pass participant id to handler
}

entity LoginController {
    Store participant id
}

entity BeginView {
    Present begin message
    Go to next screen
}

entity SpellingController {
    Setup everything
    Manage trial sequence 
    Provide access to data
    Provide access to stim
    Submit data
    Save data
}

entity TrialStimView {
    Presents stim cue
    Run present stim
}

entity TrialResponseView {
    Cue participant for response 
    Collect response
    Pass response to handler
}

entity TrialResponseController {
    Submit response
    Continue trial sequence
}

entity RestView {
    Cue participant to rest 
}

entity RestController {
    Resume activity after an ISI
}

entity EndView {
    Present end message
}

entity StimController {   
    Interact with the AudioController 
    Interact with the stimuli package
    Prepare stim 
    Present the stim
}

entity AudioController {
    Play audio
    Setup audio device
    Validate audio file
}

MSpellingApp --> SetupView
SetupView --> SetupController
SetupView --> LoadingView
SetupController --> WorkspaceView
SetupController --> LoginView
WorkspaceView --> SetupController
LoginView --> LoginController
LoginController --> BeginView
BeginView --> SpellingController
SpellingController --> TrialStimView
TrialStimView --> StimController
SpellingController --> TrialResponseView
TrialResponseView --> TrialResponseController
TrialResponseController --> SpellingController
SpellingController --> RestView
RestView --> RestController
RestController --> SpellingController
SpellingController --> EndView
SpellingController --> LoginController
SpellingController --> StimController
SpellingController --> SetupController
SpellingController --> DataBase
StimController --> AudioController
StimController --> SpellingController
@enduml
